# Jalium.UI

./: .gitignore  Directory.Build.props  Jalium.UI.slnx  LICENSE  README.ja.md  README.ko.md  README.md  README.zh-CN.md  run_parity.ps1
src/native/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  CMakePresets.json  Jalium.Native.sln  JaliumNative.slnx  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  build-android-deps.sh  build-android.sh  jalium.native.dev.targets  jalium.native.package.complete.vcxproj  jalium.native.stamp.targets
src/native/cmake/: JaliumLinuxExports.cmake  JaliumNativeStamp.cmake
src/native/cmake/exports/: core.map  media-core.map  media.map  platform.map  software.map  text.map  vulkan.map
src/native/cmake/toolchains/: JaliumLinuxCrossCommon.cmake  linux-glibc-arm64.cmake  linux-glibc-x64.cmake  linux-musl-arm64.cmake  linux-musl-x64.cmake
src/native/jalium.native.aot/: CMakeLists.txt  aot_register.cpp  jalium.native.aot.static.vcxproj
src/native/jalium.native.aot/tests/: linux_aot_link_smoke.cpp
src/native/jalium.native.browser/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  cmake_install.cmake  jalium.native.browser.slnx  jalium.native.browser.static.vcxproj  jalium.native.browser.vcxproj  jalium.native.browser.vcxproj.filters
src/native/jalium.native.browser/include/: jalium_browser_api.h
src/native/jalium.native.browser/redist/: README.md
src/native/jalium.native.browser/src/: browser.cpp
src/native/jalium.native.core/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  cmake_install.cmake  jalium.native.core.slnx  jalium.native.core.static.vcxproj  jalium.native.core.vcxproj  jalium.native.core.vcxproj.filters
src/native/jalium.native.core/include/: jalium_api.h  jalium_backend.h  jalium_path_cache.h  jalium_string_util.h  jalium_text_options.h  jalium_text_stats.h  jalium_types.h  jalium_vello_encode.h  jalium_video_surface.h
src/native/jalium.native.core/shaders/: continuous_corner.hlsli
src/native/jalium.native.core/src/: brush.cpp  context.cpp  jalium_text_options.cpp  jalium_text_stats.cpp  render_target.cpp  video_surface.cpp
src/native/jalium.native.d3d12/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  cmake_install.cmake  jalium.native.d3d12.slnx  jalium.native.d3d12.static.vcxproj  jalium.native.d3d12.vcxproj  jalium.native.d3d12.vcxproj.filters
src/native/jalium.native.d3d12/include/: d3d12_backend.h  d3d12_direct_renderer.h  d3d12_glyph_atlas.h  d3d12_impeller_engine.h  d3d12_ink_layer.h  d3d12_liquid_glass_bytecode.h  d3d12_render_target.h  d3d12_resources.h  d3d12_retained_layer.h  d3d12_shader_bytecode.h  d3d12_shader_source.h  d3d12_vello.h  d3d12_vello_bytecode.h
src/native/jalium.native.d3d12/shaders/: bitmap_quad.vs.hlsl  bitmap_text.ps.hlsl  bitmap_text_smooth.ps.hlsl  color_matrix.ps.hlsl  desktop_backdrop.ps.hlsl  emboss.ps.hlsl  gen_bytecode_header.ps1  gen_liquid_glass_bytecode.ps1  gen_vello_bytecode.ps1  rounded_clip.hlsli  sdf_rect.ps.hlsl  sdf_rect.vs.hlsl  snapshot_backdrop.ps.hlsl  transition_quad.ps.hlsl  vello_coarse.cs.hlsl  vello_fine.cs.hlsl  vello_tile_alloc.cs.hlsl
src/native/jalium.native.d3d12/src/: d3d12_backend.cpp  d3d12_bitmap.cpp  d3d12_direct_renderer.cpp  d3d12_glyph_atlas.cpp  d3d12_impeller_engine.cpp  d3d12_init.cpp  d3d12_ink_layer.cpp  d3d12_path_pipeline.cpp  d3d12_pipeline.cpp  d3d12_render_target.cpp  d3d12_text.cpp  d3d12_vello.cpp  d3d12_vello_engine.cpp  liquid_glass_effects.cpp  transition_shader_effect.cpp
src/native/jalium.native.demo.memprobe/: CMakeLists.txt
src/native/jalium.native.demo.memprobe/src/: main.cpp
src/native/jalium.native.media.android/: CMakeLists.txt
src/native/jalium.native.media.android/src/: and_camera_source.cpp  and_codec_caps.cpp  and_image_decoder.cpp  and_jni_image_fallback.cpp  and_media_exports.cpp  and_media_init.cpp  and_video_decoder.cpp  and_yuv_neon.cpp  and_yuv_scalar.cpp  and_yuv_sse2.cpp
src/native/jalium.native.media.apple/: CMakeLists.txt
src/native/jalium.native.media.apple/src/: apple_media_exports.cpp
src/native/jalium.native.media.core/: jalium.native.media.core.static.vcxproj  jalium.native.media.core.vcxproj
src/native/jalium.native.media.core/include/: jalium_media.h
src/native/jalium.native.media.core/src/: jalium_media_common.cpp
src/native/jalium.native.media.linux/: CMakeLists.txt
src/native/jalium.native.media.linux/src/: gstreamer_loader.cpp  gstreamer_loader.h  linux_media.cpp
src/native/jalium.native.media.linux/tests/: check_no_gstreamer_needed.cmake  linux_media_smoke.cpp  media_smoke.srt  run_real_media_smoke.py
src/native/jalium.native.media.windows/: jalium.native.media.windows.static.vcxproj  jalium.native.media.windows.vcxproj
src/native/jalium.native.media.windows/src/: win_media_exports.cpp  win_media_init.cpp  win_mf_aac_decoder.cpp  win_mf_camera_source.cpp  win_mf_codec_caps.cpp  win_mf_video_decoder.cpp  win_wic_decoder.cpp
src/native/jalium.native.metal/: jalium.native.metal.vcxproj
src/native/jalium.native.metal/include/: metal_backend.h
src/native/jalium.native.metal/src/: metal_backend.cpp  metal_init.cpp
src/native/jalium.native.platform/: CMakeLists.txt  jalium.native.platform.static.vcxproj  jalium.native.platform.vcxproj
src/native/jalium.native.platform/include/: jalium_platform.h
src/native/jalium.native.platform/protocols/: xdg-activation-v1.xml
src/native/jalium.native.platform/src/: macos_ime.mm  platform_android.cpp  platform_common.cpp  platform_linux_x11.cpp  platform_macos.mm  platform_win32.cpp
src/native/jalium.native.platform/tests/: platform_linux_tests.cpp
src/native/jalium.native.software/: CMakeLists.txt  jalium.native.software.static.vcxproj
src/native/jalium.native.software/include/: software_backend.h  wayland_shm_present.h
src/native/jalium.native.software/src/: software_backend.cpp  wayland_shm_present.cpp
src/native/jalium.native.text/: CMakeLists.txt
src/native/jalium.native.vulkan/: CMakeLists.txt  jalium.native.vulkan.static.vcxproj  jalium.native.vulkan.vcxproj
(+2218 files in other folders)
